--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div>
           <label>Konkrete Maßnahme / Entscheidung</label>
           <div class="choices twocol" id="massnahmeChoices">
-            <label class="choice"><input type="checkbox" name="massnahmeOpt" value="Behandlung auf freiwilliger Basis"><span>Behandlung auf freiwilliger Basis</span></label>
+            <label class="choice"><input type="checkbox" name="massnahmeOpt" value="Stationäre Behandlung"><span>Stationäre Behandlung</span></label>
             <label class="choice"><input type="checkbox" name="massnahmeOpt" value="Psychopharmakologische Therapie"><span>Psychopharmakologische Therapie</span></label>
             <label class="choice"><input type="checkbox" name="massnahmeOpt" value="Elektrokrampftherapie (EKT)"><span>Elektrokrampftherapie (EKT)</span></label>
             <label class="choice"><input type="checkbox" name="massnahmeOpt" value="Operativer Eingriff"><span>Operativer Eingriff</span></label>
@@ -237,4 +237,5 @@ for (i = 0; i < coll.length; i++) {
     updateChipsActive('#genderChoices');updateChipsActive('#massnahmeChoices');updateChipsActive('#kontextChoices');updateChipsActive('#vollmachtChoices');updateChipsActive('#zusatzChoices');neonUpdate();
   </script>
          
+
 
