--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     input[type=range]::-moz-range-thumb{height:20px;width:20px;border-radius:50%;background:#fff;box-shadow:0 0 0 3px rgba(255,255,255,.7),0 4px 12px rgba(0,0,0,.2)}
     .ticks{display:flex;justify-content:space-between;font-size:.8rem;color:var(--muted)}.ticks span{width:24%;text-align:center}
     .ticks1{display:block;font-size:.8rem;color:var(--muted)}
-    .collapsible {background-color: transparent;color:var(--muted);cursor: pointer;padding: 8px;width: 10%;border: none;text-align: center;outline: none;font-size: 13px;margin-left:25%}
+    .collapsible {background-color: transparent;color:var(--muted);cursor: pointer;padding: 8px;width: 10%;border: none;text-align: center;outline: none;font-size: 13px;}
     .active, .collapsible:hover {background-color: #ccc;}
     .content1 {padding: 0 18px;display: none;overflow: hidden;background-color:transparent;border-radius: 15px;}
     .pill{display:inline-flex;align-items:center;gap:8px;background:rgba(55,93,252,.06);border:1px dashed rgba(55,93,252,.3);border-radius:999px;padding:6px 10px;color:var(--ink);font-weight:600}
@@ -244,6 +244,7 @@ for (i = 0; i < coll.length; i++) {
     updateChipsActive('#genderChoices');updateChipsActive('#massnahmeChoices');updateChipsActive('#kontextChoices');updateChipsActive('#vollmachtChoices');updateChipsActive('#zusatzChoices');neonUpdate();
   </script>
          
+
 
 
 
